# opengl-examples

./: .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/core/: Core.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp  Renderer.hpp  Transform3D.hpp  Window.hpp
core/include/core/gl/: IndexBuffer.hpp  OpenGLObject.hpp  ShaderProgram.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexLayout.hpp
core/include/core/math/: Transform2D.hpp
core/include/core/util/: VertexLayout.hpp
core/src/: Core.cpp  Core.hpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  ShaderProgram.cpp  Transform2D.cpp  Transform3D.cpp  VertexArray.cpp  Window.cpp
core/src/gl/: IndexBuffer.cpp  ShaderProgram.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp
core/src/math/: Transform2D.cpp
core/src/util/: VertexLayout.cpp
examples/: CMakeLists.txt
examples/01-window/: CMakeLists.txt
examples/01-window/src/: EmptyRenderer.cpp  EmptyRenderer.hpp  main.cpp
examples/02-triangle/: CMakeLists.txt
examples/02-triangle/assets/shaders/: vertex_color.frag  vertex_color.vert
examples/02-triangle/src/: TriangleRenderer.cpp  TriangleRenderer.hpp  main.cpp
examples/03-rectangle/: CMakeLists.txt
examples/03-rectangle/assets/shaders/: vertex_color.vert
examples/03-rectangle/src/: RectangleRenderer.cpp  RectangleRenderer.hpp  main.cpp
examples/04-rectangle-uniform-color/: CMakeLists.txt
examples/04-rectangle-uniform-color/assets/shaders/: uniform_color.frag  uniform_color.vert  vertex_color.frag
examples/04-rectangle-uniform-color/src/: RectangleRenderer.cpp  RectangleRenderer.hpp  main.cpp
examples/05-texture/: CMakeLists.txt
examples/05-texture/assets/shaders/: texture_and_vertex_color.frag  texture_and_vertex_color.vert
examples/05-texture/src/: TextureRenderer.cpp  TextureRenderer.hpp  main.cpp
examples/06-transformations/: CMakeLists.txt
examples/06-transformations/assets/shaders/: texture_and_vertex_color.vert
examples/06-transformations/src/: TransformationsRenderer.cpp  TransformationsRenderer.hpp  main.cpp
examples/07-orthographic-camera/: CMakeLists.txt
examples/07-orthographic-camera/assets/shaders/: texture_and_vertex_color.frag  texture_and_vertex_color.vert
examples/07-orthographic-camera/src/: OrthographicCameraRenderer.cpp  OrthographicCameraRenderer.hpp  main.cpp
examples/08-multiple-objects/: CMakeLists.txt
examples/08-multiple-objects/src/: MultipleObjectsRenderer.cpp  MultipleObjectsRenderer.hpp  main.cpp
examples/09-perspective-camera/: CMakeLists.txt
examples/09-perspective-camera/src/: PerspectiveCameraRenderer.cpp  PerspectiveCameraRenderer.hpp  main.cpp
